# MultiTapDelay

MultiTapDelay/: CMakeLists.txt
MultiTapDelay/resource/: editor.uidesc
MultiTapDelay/source/: BiquadFilter.cpp  BiquadFilter.hpp  ButterworthFilters.cpp  ButterworthFilters.hpp  Filter.hpp  ParameterCrossfade.cpp  ParameterCrossfade.hpp  PeakFilt.cpp  PeakFilt.hpp  RingBuffer.cpp  RingBuffer.hpp  SincInterpolator.h  Utils.cpp  Utils.hpp  cids.h  controller.cpp  controller.h  entry.cpp  processor.cpp  processor.h  version.h
